# Mp3Converter

./: .gitignore  README.md  blog.md  build.gradle  settings.gradle
Lame/: build.gradle  settings.gradle
Lame/LameMP3/CMake/: CMakeLists.txt  LICENSE  README.md  build.gradle
Lame/LameMP3/CMake/src/main/: AndroidManifest.xml
Lame/LameMP3/CMake/src/main/cpp/lamemp3/: CMakeLists.txt  VbrTag.c  VbrTag.h  bitstream.c  bitstream.h  encoder.c  encoder.h  fft.c  fft.h  gain_analysis.c  gain_analysis.h  id3tag.c  id3tag.h  l3side.h  lame-analysis.h  lame.c  lame.h  lame_global_flags.h  machine.h  newmdct.c  newmdct.h  presets.c  psymodel.c  psymodel.h  quantize.c  quantize.h  quantize_pvt.c  quantize_pvt.h  reservoir.c  reservoir.h  set_get.c  set_get.h  tables.c  tables.h  takehiro.c  util.c  util.h  vbrquantize.c  vbrquantize.h  version.c
Lame/LameMP3/CMake/src/main/cpp/lamemp3/vector/: lame_intrin.h  xmm_quantize_sub.c
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/jaygoo/demo/mp3converter/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
